2015-02-23  Corinna Vinschen  <corinna@vinschen.de>

	* cygwait.h (enum cw_wait_mask): Add cw_sig_restart.  Add comments
	to explain the meaning of the possible values.
	* cygwait.cc (is_cw_sig_restart): Define.
	(is_cw_sig_handle): Check for cw_sig_restart as well.
	(cygwait): Restart always if cw_sig_restart is set.
	* thread.cc (pthread::join): Call cygwait with cw_sig_restart flag
	to avoid having to handle signals at all.

2015-02-23  Corinna Vinschen  <corinna@vinschen.de>

	* cygwait.cc (cygwait): Move setting res to WAIT_SIGNALED to clarify
	when WAIT_SIGNALED is returned to the caller.

2015-02-23  Corinna Vinschen  <corinna@vinschen.de>

	* winsup.h (SIGTOMASK): Add cast to sigset_t to avoid int overflow.

2015-02-20  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (internal_getgroups): Take additional timeout_ns parameter.
	Restrict fetching group account entries from user token groups by
	timeout_ns 100ns-intervals.  Add preceding comment to explain why.
	* pwdgrp.h (internal_getgroups): Align prototype.
	* times.cc (GetTickCount_ns): New function.
	* uinfo.cc (internal_getlogin): Call internal_getgroups wih 300ms
	timeout.
	* winsup.h (GetTickCount_ns): Declare.

2015-02-19  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* Makefile.in (sigfe.o): Use CFLAGS.

2015-02-19  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* include/cygwin/stdlib.h (initstate, random, setstate, srandom):
	Check if __XSI_VISIBLE is set by sys/cdefs.h, rather than testing
	for _XOPEN_SOURCE directly, to work correctly when _GNU_SOURCE is
	set.

2015-02-19  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (setacl): Always grant owner FILE_WRITE_ATTRIBUTES access.

2015-02-18  Corinna Vinschen  <corinna@vinschen.de>

	* ldap.cc (struct cyg_ldap_search): Add scope member.
	(cyg_ldap::search_s): Add parameter scope.  Use as LDAP search scope
	instead of fixed LDAP_SCOPE_SUBTREE scope.
	(ldap_search_thr): Call cyg_ldap::search_s with scope from argument.